class AboutUsKeys {
  static const TITLE_ABOUT = "titleAbout";
  static const TITLE_REPORT = 'titleReport';
  static const SUBTITLE_REPORT = 'subtitleReport';
  static const AUTHOR_NAME = 'authorName';
  static const AUTHOR_USERNAME = 'authorUsername';
  static const AUTHOR_EMAIL = 'authorEmail';
  static const VERSION_NUMBER = 'versionNumber';
}

class SideDrawerKeys {
  static const DRAWER = 'drawer';
  static const DRAWER_LABELS = 'drawerLabels';
  static const ADD_LABEL = 'addLabel';
  static const DRAWER_PROJECTS = 'drawerProjects';
  static const ADD_PROJECT = 'addProject';
  static const TODAY = 'today';
  static const INBOX = 'inbox';
  static const NEXT_7_DAYS = 'next7Days';
}

class AddProjectKeys {
  static const TITLE_ADD_PROJECT = 'titleAddProject';
  static const TEXT_FORM_PROJECT_NAME = 'textFormProjectName';
  static const ADD_PROJECT_BUTTON = 'addProjectButton';
}

class AddLabelKeys {
  static const TEXT_FORM_LABEL_NAME = 'textFormLabelName';
  static const ADD_LABEL_BUTTON = 'addLabelButton';
  static const TITLE_ADD_LABEL = 'titleAddLabel';
}

class AddTaskKeys {
  static const ADD_TASK_TITLE = 'add_task_title';
  static const ADD_TITLE = 'addTitle';
  static const ADD_TASK = 'addTask';
}

class HomePageKeys {
  static const ADD_NEW_TASK_BUTTON = 'add_new_task_button';
  static const HOME_TITLE = 'home_title';
  static const MESSAGE_IN_CENTER = 'messageInCenter';
}

class CompletedTaskPageKeys {
  static const POPUP_ACTION = 'popup_action';
  static const COMPLETED_TASKS = 'completed_tasks';
}

class DialogKeys {
  static const CONFIRM_BUTTON = 'dialogConfirmKey';
  static const CANCEL_BUTTON = 'dialogCancelKey';
}
